--- a/app/src/main/res/layout/trans_detail.xml
+++ b/app/src/main/res/layout/trans_detail.xml
@@ -28,7 +28,7 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="2dp"
                 android:layout_weight="1"
@@ -54,7 +54,7 @@
             <TextView
                 android:id="@+id/txvAmount"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:layout_marginRight="4dp"
                 android:gravity="center"
