--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,13 +29,13 @@
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_plus"
-        app:layout_anchorGravity="bottom|center|end"/>
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fabAdd"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|center"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:src="@drawable/ic_plus"-->
+        <!--app:layout_anchorGravity="bottom|center|end"/>-->
 
 </android.support.design.widget.CoordinatorLayout>
