--- a/app/src/main/res/layout/fragment_trans.xml
+++ b/app/src/main/res/layout/fragment_trans.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLinear"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <ExpandableListView
         android:id="@+id/listTrans"
@@ -12,7 +11,18 @@
         android:layout_height="wrap_content"
         android:groupIndicator="@null" />
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabAddTrans"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:src="@drawable/ic_plus"
+        app:layout_anchorGravity="bottom|center|end"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="4dp"/>
+
+</RelativeLayout>
 
 
 
