--- a/app/src/main/res/layout/trans_detail.xml
+++ b/app/src/main/res/layout/trans_detail.xml
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:paddingBottom="4dp">
 
             <ImageView
                 android:id="@+id/imgCateg"
