--- a/app/src/main/res/layout/trans_detail.xml
+++ b/app/src/main/res/layout/trans_detail.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/linearDetail">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -12,21 +13,22 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         app:cardCornerRadius="0dp"
-        app:cardElevation="0dp">
+        app:cardElevation="0dp"
+        android:id="@+id/cardDetail">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingLeft="10dp"
-            android:paddingBottom="4dp">
+            android:paddingBottom="4dp"
+            android:paddingLeft="10dp">
 
             <ImageView
                 android:id="@+id/imgCateg"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:src="@drawable/ic_cat_food"
-                android:layout_gravity="center_vertical" />
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_cat_food" />
 
             <LinearLayout
                 android:layout_width="0dp"
