--- a/app/src/main/res/layout/trans_header.xml
+++ b/app/src/main/res/layout/trans_header.xml
@@ -9,9 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp">
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
