--- a/app/src/main/res/layout/activity_new_transaction.xml
+++ b/app/src/main/res/layout/activity_new_transaction.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,42 +28,44 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:editable="false"
+                android:focusable="false"
                 android:hint="@string/text_tanggal"
                 android:inputType="none"
-                android:onClick="showDatePickerDialog"
-                android:focusable="false"
-                android:editable="false"/>
+                android:onClick="showDatePickerDialog" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:onClick="showCategoryChoice">
+            android:layout_marginTop="8dp"
+            android:onClick="showCategoryChoice"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgCateg"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
+                android:onClick="showCategoryChoice"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_cat_form"
-                android:onClick="showCategoryChoice"/>
+                android:src="@drawable/ic_cat_form" />
 
             <EditText
                 android:id="@+id/txtKat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/text_kategori"
-                android:onClick="showCategoryChoice"
                 android:editable="false"
-                android:focusable="false"/>
+                android:focusable="false"
+                android:hint="@string/text_kategori"
+                android:onClick="showCategoryChoice" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -85,6 +88,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -105,33 +109,34 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="  Hapus Transaksi"
-            android:id="@+id/btnDelete"
-            android:textAllCaps="false"
+            android:layout_marginTop="8dp"
             android:drawableLeft="@drawable/ic_remove_circle"
-            android:onClick="deleteTrans"/>
+            android:onClick="deleteTrans"
+            android:text="  Hapus Transaksi"
+            android:textAllCaps="false" />
 
         <!--hidden param -->
         <EditText
             android:id="@+id/txtIdKat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/txtTypeKat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/txtIdTrans"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone" />
         <!--end hidden param -->
 
 
