--- a/app/src/main/res/layout/activity_new_budget.xml
+++ b/app/src/main/res/layout/activity_new_budget.xml
@@ -74,8 +74,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="8dp"
                 android:drawableLeft="@drawable/ic_remove_circle"
-                android:onClick="deleteTrans"
-                android:text="  Hapus Transaksi"
+                android:onClick="deleteBudget"
+                android:text="  Hapus Anggaran"
                 android:textAllCaps="false" />
 
             <!--hidden param -->
@@ -102,9 +102,20 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:paddingBottom="8dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvListTransaction"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
 
