--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#d4d4d4">
+    android:background="#FFDEDDDD">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_budget"
