--- a/app/src/main/res/layout/fragment_trans.xml
+++ b/app/src/main/res/layout/fragment_trans.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLinear"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#dedddd">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardSummary"
