--- a/app/src/main/res/layout/fragment_trans.xml
+++ b/app/src/main/res/layout/fragment_trans.xml
@@ -27,7 +27,8 @@
                 android:layout_weight="1"
                 android:text="In : 10000"
                 android:textAlignment="center"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/txtTotalOut"
@@ -36,7 +37,8 @@
                 android:layout_weight="1"
                 android:text="Out : 10000"
                 android:textAlignment="center"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:textSize="16sp"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
